# quantumBloch_

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  package-lock.json  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: components.py  components_blochpkg.py  components_cirq.py  components_qutip.py  main.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  exporter_qiskit.py  qiskit_common.py  repository_memory.py  repository_sqlite.py  simulator_qiskit.py
backend/app/adapters/api/: __init__.py  circuits.py  dependencies.py  snapshots.py
backend/app/domain/: __init__.py  models.py  noise.py  ports.py  services.py
backend/app/schemas/: __init__.py  circuit.py  export.py  measurement.py  persistence.py  simulate.py  snapshot.py
backend/tests/: test_health.py  test_simulation_and_export.py
dash_app/: app.py
docs/: README.md  devlog.md  project_plan.md  ux_wireframe.md  visual_spec.md
fpga_background/: quantum_rng_lfsr.v
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/mocks/: dark.html  light.html  mock.css
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/commands/: AddGateCommand.ts  (+7 more)
notebooks/: bloch_sphere_gates.ipynb
tests/: conftest.py  test_gates.py  test_parser_and_geometry.py
utils/: gate_utils.py  plotly_bloch.py
web_client/: index.html
(+22 files in other folders)
